--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-/target/debug/
-/target/debug/!calculator.exe
-
-/target/release
-/target/release/!calculator.exe
-
-/target/.rustc_info.json
-
+/target
 /.vscode
+/src/tests.rs
+/src/validator.rs
